Update configuring-application-database.md